k8s/dso-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dso-api
  name: dso-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dso-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: dso-api
    spec:
      containers:
        - args:
            - uwsgi
            - --py-auto-reload=1
          image: dso-api
          imagePullPolicy: Never
          name: dso-api
          ports:
            - containerPort: 8000
          resources: {}

      restartPolicy: Always

status: {}
