k8s/dso-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dso-namespace
  labels:
    networking/namespace: dso
    team: datapunt
    api: dso
  name: dso-api
spec:
  ports:
    - name: "dso-api"
      port: 8000
      targetPort: 8000
  type: LoadBalancer

  selector:
    api: dso
status:
  loadBalancer: {}
