k8s/sociaal-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    team: datateam-sociaal
  name: sociaal
spec:
  type: ClusterIP
  ports:
    - name: "sociaal"
      port: 8888
      targetPort: 8888

  selector:
    team: datateam-sociaal
